# OceanRender

./: CMakeLists.txt  main.cpp  water.h
Camera/: Camera.cpp  Camera.hpp
objects/nanosuit/: LICENSE.txt  nanosuit.mtl
shaders/: depthMap.frag  depthMap.vert  screenQuad.frag  shaderStart.frag  shaderStart.vert  waterShader.frag  waterShader.vert
